src/test/ui/type-alias-impl-trait/type-alias-impl-trait-fn-type.stderr
error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/type-alias-impl-trait-fn-type.rs:6:20
   |
LL | type Foo = fn() -> impl Send;
   |                    ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
